# PlugadorAtomico

./: .gitmodules  App.jsx  Babel.config.js  app.json  celulardadaianaerros.md  codemagic.yaml  error.md  errorprofundo.md  errorsgraves  errorsgraves.md  errorsgravesv12  errosgravespof.md  index.js  melhorias.md  metro.config.js  package-lock.json  package.json  persisthtmllogcat.md  saida_do_projeto.md
android/: build.gradle  gradle.properties  gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  codec2_jni.cpp
android/app/src/main/java/com/plugadoratomico/: MainActivity.kt  MainApplication.kt  PlugadorPackage.kt
android/app/src/main/java/com/plugadoratomico/codec2/: Codec2Module.kt  Codec2Wrapper.kt
android/app/src/main/java/com/plugadoratomico/gps/: GpsModule.kt  GpsService.kt
android/app/src/main/java/com/plugadoratomico/overlay/: DragTouchListener.kt  OverlayModule.kt  OverlayService.kt
android/app/src/main/java/com/plugadoratomico/sms/: SmsModule.kt  SmsQueue.kt  SmsReceiver.kt  SmsSender.kt
android/app/src/main/res/layout/: overlay_widget.xml
android/app/src/main/res/values/: strings.xml
src/screens/: HomeScreen.jsx  ProfileScreen.jsx  SetupScreen.jsx
src/services/: AudioRecorder.js  Database.js  LocationTracker.js  MessageRouter.js
